Fix: #4053 - focused buttons have wrong colour in colors theme

--- a/resources/css/colors.css
+++ b/resources/css/colors.css
@@ -106,7 +106,8 @@
     color: var(--color-5);
 }
 
-.btn-primary {
+.btn-primary,
+.btn-primary:focus {
     background: var(--color-1);
 }
 
